[package]
name = "spacestate"
version = "0.1.0"
authors = ["cfstras <cfstras@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# needed by mumble client protocol, but the versions are locked by rocket
rustls = {version = "0.20.4", features = ["dangerous_configuration"]}
webpki = "0.22.2"
webpki-roots = "0.22.2"

rand = "0.7.3"
prost = "0.6"
fake_clock = "0.3.0"
bytes = "0.5.4"

rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = { version = "1.0.110", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.55"

[build-dependencies]
prost-build = "0.6"

[profile.release]
lto = true
