[package]
name = "spacestate"
version = "0.1.0"
authors = ["cfstras <cfstras@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# needed by mumble client protocol, but the versions are locked by rocket
rustls = { version = "0.21.11", features = ["dangerous_configuration"] }
webpki = "0.22.4"
webpki-roots = "0.25.3"

rand = "0.8.5"
prost = "0.12.3"
fake_clock = "0.3.1"
bytes = "1.5.0"

rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"

[build-dependencies]
prost-build = "0.12.3"

[profile.release]
lto = true
